--- a/customer-detaisl.html
+++ b/customer-detaisl.html
@@ -5,7 +5,7 @@
       rel="stylesheet"
       as="style"
       onload="this.rel='stylesheet'"
-      href="https://fonts.googleapis.com/css2?display=swap&amp;family=Manrope%3Awght%40400%3B500%3B700%3B800&amp;family=Noto+Sans%3Awght%40400%3B500%3B700%3B900"
+      href="https://fonts.googleapis.com/css2?display=swap&family=Manrope%3Awght%40400%3B500%3B700%3B800&family=Noto+Sans%3Awght%40400%3B500%3B700%3B900"
     />
 
     <title>Stitch Design</title>
@@ -35,11 +35,11 @@
           </div>
           <div class="flex flex-1 justify-end gap-8">
             <div class="flex items-center gap-9">
-              <a class="text-[#131712] text-sm font-medium leading-normal" href="#">Dashboard</a>
-              <a class="text-[#131712] text-sm font-medium leading-normal" href="#">Sales</a>
-              <a class="text-[#131712] text-sm font-medium leading-normal" href="#">Customers</a>
-              <a class="text-[#131712] text-sm font-medium leading-normal" href="#">Inventory</a>
-              <a class="text-[#131712] text-sm font-medium leading-normal" href="#">Reports</a>
+              <a class="text-[#131712] text-sm font-medium leading-normal" href="#">Painel</a>
+              <a class="text-[#131712] text-sm font-medium leading-normal" href="#">Vendas</a>
+              <a class="text-[#131712] text-sm font-medium leading-normal" href="#">Clientes</a>
+              <a class="text-[#131712] text-sm font-medium leading-normal" href="#">Estoque</a>
+              <a class="text-[#131712] text-sm font-medium leading-normal" href="#">Relatórios</a>
             </div>
             <button
               class="flex max-w-[480px] cursor-pointer items-center justify-center overflow-hidden rounded-lg h-10 bg-[#f1f4f1] text-[#131712] gap-2 text-sm font-bold leading-normal tracking-[0.015em] min-w-0 px-2.5"
@@ -61,16 +61,16 @@
         <div class="px-40 flex flex-1 justify-center py-5">
           <div class="layout-content-container flex flex-col max-w-[960px] flex-1">
             <div class="flex flex-wrap justify-between gap-3 p-4">
-              <p class="text-[#131712] tracking-light text-[32px] font-bold leading-tight min-w-72">Customer Details: Amelia Harper</p>
+              <p class="text-[#131712] tracking-light text-[32px] font-bold leading-tight min-w-72">Detalhes do Cliente: Amelia Harper</p>
             </div>
-            <h3 class="text-[#131712] text-lg font-bold leading-tight tracking-[-0.015em] px-4 pb-2 pt-4">Customer Information</h3>
+            <h3 class="text-[#131712] text-lg font-bold leading-tight tracking-[-0.015em] px-4 pb-2 pt-4">Informações do Cliente</h3>
             <div class="p-4 grid grid-cols-[20%_1fr] gap-x-6">
               <div class="col-span-2 grid grid-cols-subgrid border-t border-t-[#dee4dc] py-5">
-                <p class="text-[#6d8566] text-sm font-normal leading-normal">Name</p>
+                <p class="text-[#6d8566] text-sm font-normal leading-normal">Nome</p>
                 <p class="text-[#131712] text-sm font-normal leading-normal">Amelia Harper</p>
               </div>
               <div class="col-span-2 grid grid-cols-subgrid border-t border-t-[#dee4dc] py-5">
-                <p class="text-[#6d8566] text-sm font-normal leading-normal">Phone</p>
+                <p class="text-[#6d8566] text-sm font-normal leading-normal">Telefone</p>
                 <p class="text-[#131712] text-sm font-normal leading-normal">(555) 123-4567</p>
               </div>
               <div class="col-span-2 grid grid-cols-subgrid border-t border-t-[#dee4dc] py-5">
@@ -78,18 +78,18 @@
                 <p class="text-[#131712] text-sm font-normal leading-normal">amelia.harper@email.com</p>
               </div>
             </div>
-            <h3 class="text-[#131712] text-lg font-bold leading-tight tracking-[-0.015em] px-4 pb-2 pt-4">Purchase History</h3>
+            <h3 class="text-[#131712] text-lg font-bold leading-tight tracking-[-0.015em] px-4 pb-2 pt-4">Histórico de Compras</h3>
             <div class="px-4 py-3 @container">
               <div class="flex overflow-hidden rounded-lg border border-[#dee4dc] bg-white">
                 <table class="flex-1">
                   <thead>
                     <tr class="bg-white">
-                      <th class="table-cb23f5cb-e000-4825-969b-1f1ac1b88c35-column-120 px-4 py-3 text-left text-[#131712] w-[400px] text-sm font-medium leading-normal">Date</th>
+                      <th class="table-cb23f5cb-e000-4825-969b-1f1ac1b88c35-column-120 px-4 py-3 text-left text-[#131712] w-[400px] text-sm font-medium leading-normal">Data</th>
                       <th class="table-cb23f5cb-e000-4825-969b-1f1ac1b88c35-column-240 px-4 py-3 text-left text-[#131712] w-[400px] text-sm font-medium leading-normal">
-                        Total Sale Value
+                        Valor Total da Venda
                       </th>
                       <th class="table-cb23f5cb-e000-4825-969b-1f1ac1b88c35-column-360 px-4 py-3 text-left text-[#131712] w-[400px] text-sm font-medium leading-normal">
-                        Items Purchased (summary)
+                        Itens Comprados (resumo)
                       </th>
                     </tr>
                   </thead>
@@ -98,27 +98,27 @@
                       <td class="table-cb23f5cb-e000-4825-969b-1f1ac1b88c35-column-120 h-[72px] px-4 py-2 w-[400px] text-[#6d8566] text-sm font-normal leading-normal">
                         2024-07-20
                       </td>
-                      <td class="table-cb23f5cb-e000-4825-969b-1f1ac1b88c35-column-240 h-[72px] px-4 py-2 w-[400px] text-[#6d8566] text-sm font-normal leading-normal">$150.00</td>
+                      <td class="table-cb23f5cb-e000-4825-969b-1f1ac1b88c35-column-240 h-[72px] px-4 py-2 w-[400px] text-[#6d8566] text-sm font-normal leading-normal">R$150,00</td>
                       <td class="table-cb23f5cb-e000-4825-969b-1f1ac1b88c35-column-360 h-[72px] px-4 py-2 w-[400px] text-[#6d8566] text-sm font-normal leading-normal">
-                        2 items (Clothing)
+                        2 itens (Roupas)
                       </td>
                     </tr>
                     <tr class="border-t border-t-[#dee4dc]">
                       <td class="table-cb23f5cb-e000-4825-969b-1f1ac1b88c35-column-120 h-[72px] px-4 py-2 w-[400px] text-[#6d8566] text-sm font-normal leading-normal">
                         2024-06-15
                       </td>
-                      <td class="table-cb23f5cb-e000-4825-969b-1f1ac1b88c35-column-240 h-[72px] px-4 py-2 w-[400px] text-[#6d8566] text-sm font-normal leading-normal">$75.00</td>
+                      <td class="table-cb23f5cb-e000-4825-969b-1f1ac1b88c35-column-240 h-[72px] px-4 py-2 w-[400px] text-[#6d8566] text-sm font-normal leading-normal">R$75,00</td>
                       <td class="table-cb23f5cb-e000-4825-969b-1f1ac1b88c35-column-360 h-[72px] px-4 py-2 w-[400px] text-[#6d8566] text-sm font-normal leading-normal">
-                        1 item (Accessory)
+                        1 item (Acessório)
                       </td>
                     </tr>
                     <tr class="border-t border-t-[#dee4dc]">
                       <td class="table-cb23f5cb-e000-4825-969b-1f1ac1b88c35-column-120 h-[72px] px-4 py-2 w-[400px] text-[#6d8566] text-sm font-normal leading-normal">
                         2024-05-01
                       </td>
-                      <td class="table-cb23f5cb-e000-4825-969b-1f1ac1b88c35-column-240 h-[72px] px-4 py-2 w-[400px] text-[#6d8566] text-sm font-normal leading-normal">$200.00</td>
+                      <td class="table-cb23f5cb-e000-4825-969b-1f1ac1b88c35-column-240 h-[72px] px-4 py-2 w-[400px] text-[#6d8566] text-sm font-normal leading-normal">R$200,00</td>
                       <td class="table-cb23f5cb-e000-4825-969b-1f1ac1b88c35-column-360 h-[72px] px-4 py-2 w-[400px] text-[#6d8566] text-sm font-normal leading-normal">
-                        3 items (Clothing, Accessory)
+                        3 itens (Roupas, Acessório)
                       </td>
                     </tr>
                   </tbody>
@@ -130,11 +130,11 @@
                 @container(max-width:360px){.table-cb23f5cb-e000-4825-969b-1f1ac1b88c35-column-360{display: none;}}
               </style>
             </div>
-            <h3 class="text-[#131712] text-lg font-bold leading-tight tracking-[-0.015em] px-4 pb-2 pt-4">Notes/Interactions</h3>
+            <h3 class="text-[#131712] text-lg font-bold leading-tight tracking-[-0.015em] px-4 pb-2 pt-4">Notas/Interações</h3>
             <div class="flex max-w-[480px] flex-wrap items-end gap-4 px-4 py-3">
               <label class="flex flex-col min-w-40 flex-1">
                 <textarea
-                  placeholder="Add New Note"
+                  placeholder="Adicionar Nova Nota"
                   class="form-input flex w-full min-w-0 flex-1 resize-none overflow-hidden rounded-lg text-[#131712] focus:outline-0 focus:ring-0 border border-[#dee4dc] bg-white focus:border-[#dee4dc] min-h-36 placeholder:text-[#6d8566] p-[15px] text-base font-normal leading-normal"
                 ></textarea>
               </label>
@@ -143,22 +143,22 @@
               <button
                 class="flex min-w-[84px] max-w-[480px] cursor-pointer items-center justify-center overflow-hidden rounded-lg h-10 px-4 bg-[#53d22c] text-[#131712] text-sm font-bold leading-normal tracking-[0.015em]"
               >
-                <span class="truncate">Save Note</span>
+                <span class="truncate">Salvar Nota</span>
               </button>
             </div>
             <div class="flex gap-4 bg-white px-4 py-3">
               <div class="flex flex-1 flex-col justify-center">
-                <p class="text-[#131712] text-base font-medium leading-normal">Note added</p>
+                <p class="text-[#131712] text-base font-medium leading-normal">Nota adicionada</p>
                 <p class="text-[#6d8566] text-sm font-normal leading-normal">
-                  Customer inquired about upcoming sales on summer clothing. Provided information on the next sale event.
+                  Cliente perguntou sobre as promoções futuras de roupas de verão. Fornecidas informações sobre o próximo evento de venda.
                 </p>
                 <p class="text-[#6d8566] text-sm font-normal leading-normal">2024-07-25</p>
               </div>
             </div>
             <div class="flex gap-4 bg-white px-4 py-3">
               <div class="flex flex-1 flex-col justify-center">
-                <p class="text-[#131712] text-base font-medium leading-normal">Note added</p>
-                <p class="text-[#6d8566] text-sm font-normal leading-normal">Customer returned an item due to size issues. Processed the return and offered a store credit.</p>
+                <p class="text-[#131712] text-base font-medium leading-normal">Nota adicionada</p>
+                <p class="text-[#6d8566] text-sm font-normal leading-normal">Cliente devolveu um item devido a problemas de tamanho. Processada a devolução e oferecido um crédito na loja.</p>
                 <p class="text-[#6d8566] text-sm font-normal leading-normal">2024-06-20</p>
               </div>
             </div>
