--- a/customer-manegement.html
+++ b/customer-manegement.html
@@ -34,14 +34,14 @@
                 ></path>
               </svg>
             </div>
-            <h2 class="text-[#131712] text-lg font-bold leading-tight tracking-[-0.015em]">POS System</h2>
+            <h2 class="text-[#131712] text-lg font-bold leading-tight tracking-[-0.015em]">Sistema PDV</h2>
           </div>
           <div class="flex flex-1 justify-end gap-8">
             <div class="flex items-center gap-9">
-              <a class="text-[#131712] text-sm font-medium leading-normal" href="#">Dashboard</a>
-              <a class="text-[#131712] text-sm font-medium leading-normal" href="#">Sales</a>
-              <a class="text-[#131712] text-sm font-medium leading-normal" href="#">Products</a>
-              <a class="text-[#131712] text-sm font-medium leading-normal" href="#">Customers</a>
+              <a class="text-[#131712] text-sm font-medium leading-normal" href="#">Painel</a>
+              <a class="text-[#131712] text-sm font-medium leading-normal" href="#">Vendas</a>
+              <a class="text-[#131712] text-sm font-medium leading-normal" href="#">Produtos</a>
+              <a class="text-[#131712] text-sm font-medium leading-normal" href="#">Clientes</a>
             </div>
             <button
               class="flex max-w-[480px] cursor-pointer items-center justify-center overflow-hidden rounded-lg h-10 bg-[#f1f4f1] text-[#131712] gap-2 text-sm font-bold leading-normal tracking-[0.015em] min-w-0 px-2.5"
@@ -60,7 +60,7 @@
         <div class="px-40 flex flex-1 justify-center py-5">
           <div class="layout-content-container flex flex-col max-w-[960px] flex-1">
             <div class="flex flex-wrap justify-between gap-3 p-4">
-              <p class="text-[#131712] tracking-light text-[32px] font-bold leading-tight min-w-72">Customer Management</p>
+              <p class="text-[#131712] tracking-light text-[32px] font-bold leading-tight min-w-72">Gestão de Clientes</p>
             </div>
             <div class="px-4 py-3">
               <label class="flex flex-col min-w-40 h-12 w-full">
@@ -78,7 +78,7 @@
                     </svg>
                   </div>
                   <input
-                    placeholder="Search Customer (name or CPF/CNPJ)"
+                    placeholder="Pesquisar Cliente (nome ou CPF/CNPJ)"
                     class="form-input flex w-full min-w-0 flex-1 resize-none overflow-hidden rounded-lg text-[#131712] focus:outline-0 focus:ring-0 border-none bg-[#f1f4f1] focus:border-none h-full placeholder:text-[#6d8566] px-4 rounded-l-none border-l-0 pl-2 text-base font-normal leading-normal"
                     value=""
                   />
@@ -90,11 +90,11 @@
                 <table class="flex-1">
                   <thead>
                     <tr class="bg-white">
-                      <th class="table-55048f0c-62c8-4600-91e0-27bd79d372a5-column-120 px-4 py-3 text-left text-[#131712] w-[400px] text-sm font-medium leading-normal">Name</th>
-                      <th class="table-55048f0c-62c8-4600-91e0-27bd79d372a5-column-240 px-4 py-3 text-left text-[#131712] w-[400px] text-sm font-medium leading-normal">Phone</th>
+                      <th class="table-55048f0c-62c8-4600-91e0-27bd79d372a5-column-120 px-4 py-3 text-left text-[#131712] w-[400px] text-sm font-medium leading-normal">Nome</th>
+                      <th class="table-55048f0c-62c8-4600-91e0-27bd79d372a5-column-240 px-4 py-3 text-left text-[#131712] w-[400px] text-sm font-medium leading-normal">Telefone</th>
                       <th class="table-55048f0c-62c8-4600-91e0-27bd79d372a5-column-360 px-4 py-3 text-left text-[#131712] w-[400px] text-sm font-medium leading-normal">Email</th>
                       <th class="table-55048f0c-62c8-4600-91e0-27bd79d372a5-column-480 px-4 py-3 text-left text-[#131712] w-60 text-[#6d8566] text-sm font-medium leading-normal">
-                        Actions
+                        Ações
                       </th>
                     </tr>
                   </thead>
@@ -110,7 +110,7 @@
                         sophia.clark@email.com
                       </td>
                       <td class="table-55048f0c-62c8-4600-91e0-27bd79d372a5-column-480 h-[72px] px-4 py-2 w-60 text-[#6d8566] text-sm font-bold leading-normal tracking-[0.015em]">
-                        View Details
+                        Ver Detalhes
                       </td>
                     </tr>
                     <tr class="border-t border-t-[#dee4dc]">
@@ -124,7 +124,7 @@
                         liam.carter@email.com
                       </td>
                       <td class="table-55048f0c-62c8-4600-91e0-27bd79d372a5-column-480 h-[72px] px-4 py-2 w-60 text-[#6d8566] text-sm font-bold leading-normal tracking-[0.015em]">
-                        View Details
+                        Ver Detalhes
                       </td>
                     </tr>
                     <tr class="border-t border-t-[#dee4dc]">
@@ -138,7 +138,7 @@
                         olivia.bennett@email.com
                       </td>
                       <td class="table-55048f0c-62c8-4600-91e0-27bd79d372a5-column-480 h-[72px] px-4 py-2 w-60 text-[#6d8566] text-sm font-bold leading-normal tracking-[0.015em]">
-                        View Details
+                        Ver Detalhes
                       </td>
                     </tr>
                     <tr class="border-t border-t-[#dee4dc]">
@@ -152,7 +152,7 @@
                         noah.foster@email.com
                       </td>
                       <td class="table-55048f0c-62c8-4600-91e0-27bd79d372a5-column-480 h-[72px] px-4 py-2 w-60 text-[#6d8566] text-sm font-bold leading-normal tracking-[0.015em]">
-                        View Details
+                        Ver Detalhes
                       </td>
                     </tr>
                     <tr class="border-t border-t-[#dee4dc]">
@@ -166,7 +166,7 @@
                         ava.harper@email.com
                       </td>
                       <td class="table-55048f0c-62c8-4600-91e0-27bd79d372a5-column-480 h-[72px] px-4 py-2 w-60 text-[#6d8566] text-sm font-bold leading-normal tracking-[0.015em]">
-                        View Details
+                        Ver Detalhes
                       </td>
                     </tr>
                   </tbody>
@@ -188,7 +188,7 @@
                     <path d="M224,128a8,8,0,0,1-8,8H136v80a8,8,0,0,1-16,0V136H40a8,8,0,0,1,0-16h80V40a8,8,0,0,1,16,0v80h80A8,8,0,0,1,224,128Z"></path>
                   </svg>
                 </div>
-                <span class="truncate">New Customer</span>
+                <span class="truncate">Novo Cliente</span>
               </button>
             </div>
           </div>
