--- a/new-costumer.html
+++ b/new-costumer.html
@@ -5,7 +5,7 @@
       rel="stylesheet"
       as="style"
       onload="this.rel='stylesheet'"
-      href="https://fonts.googleapis.com/css2?display=swap&amp;family=Manrope%3Awght%40400%3B500%3B700%3B800&amp;family=Noto+Sans%3Awght%40400%3B500%3B700%3B900"
+      href="https://fonts.googleapis.com/css2?display=swap&family=Manrope%3Awght%40400%3B500%3B700%3B800&family=Noto+Sans%3Awght%40400%3B500%3B700%3B900"
     />
 
     <title>Stitch Design</title>
@@ -34,15 +34,15 @@
                 ></path>
               </svg>
             </div>
-            <h2 class="text-[#131712] text-lg font-bold leading-tight tracking-[-0.015em]">POS System</h2>
+            <h2 class="text-[#131712] text-lg font-bold leading-tight tracking-[-0.015em]">Sistema PDV</h2>
           </div>
           <div class="flex flex-1 justify-end gap-8">
             <div class="flex items-center gap-9">
-              <a class="text-[#131712] text-sm font-medium leading-normal" href="#">Dashboard</a>
-              <a class="text-[#131712] text-sm font-medium leading-normal" href="#">Sales</a>
-              <a class="text-[#131712] text-sm font-medium leading-normal" href="#">Customers</a>
-              <a class="text-[#131712] text-sm font-medium leading-normal" href="#">Inventory</a>
-              <a class="text-[#131712] text-sm font-medium leading-normal" href="#">Reports</a>
+              <a class="text-[#131712] text-sm font-medium leading-normal" href="#">Painel</a>
+              <a class="text-[#131712] text-sm font-medium leading-normal" href="#">Vendas</a>
+              <a class="text-[#131712] text-sm font-medium leading-normal" href="#">Clientes</a>
+              <a class="text-[#131712] text-sm font-medium leading-normal" href="#">Estoque</a>
+              <a class="text-[#131712] text-sm font-medium leading-normal" href="#">Relatórios</a>
             </div>
             <button
               class="flex max-w-[480px] cursor-pointer items-center justify-center overflow-hidden rounded-lg h-10 bg-[#f1f4f1] text-[#131712] gap-2 text-sm font-bold leading-normal tracking-[0.015em] min-w-0 px-2.5"
@@ -63,12 +63,12 @@
         </header>
         <div class="px-40 flex flex-1 justify-center py-5">
           <div class="layout-content-container flex flex-col w-[512px] max-w-[512px] py-5 max-w-[960px] flex-1">
-            <div class="flex flex-wrap justify-between gap-3 p-4"><p class="text-[#131712] tracking-light text-[32px] font-bold leading-tight min-w-72">New Customer</p></div>
+            <div class="flex flex-wrap justify-between gap-3 p-4"><p class="text-[#131712] tracking-light text-[32px] font-bold leading-tight min-w-72">Novo Cliente</p></div>
             <div class="flex max-w-[480px] flex-wrap items-end gap-4 px-4 py-3">
               <label class="flex flex-col min-w-40 flex-1">
-                <p class="text-[#131712] text-base font-medium leading-normal pb-2">Full Name</p>
+                <p class="text-[#131712] text-base font-medium leading-normal pb-2">Nome Completo</p>
                 <input
-                  placeholder="Enter customer's full name"
+                  placeholder="Digite o nome completo do cliente"
                   class="form-input flex w-full min-w-0 flex-1 resize-none overflow-hidden rounded-lg text-[#131712] focus:outline-0 focus:ring-0 border border-[#dee4dc] bg-white focus:border-[#dee4dc] h-14 placeholder:text-[#6d8566] p-[15px] text-base font-normal leading-normal"
                   value=""
                 />
@@ -76,9 +76,9 @@
             </div>
             <div class="flex max-w-[480px] flex-wrap items-end gap-4 px-4 py-3">
               <label class="flex flex-col min-w-40 flex-1">
-                <p class="text-[#131712] text-base font-medium leading-normal pb-2">Phone</p>
+                <p class="text-[#131712] text-base font-medium leading-normal pb-2">Telefone</p>
                 <input
-                  placeholder="Enter customer's phone number"
+                  placeholder="Digite o número de telefone do cliente"
                   class="form-input flex w-full min-w-0 flex-1 resize-none overflow-hidden rounded-lg text-[#131712] focus:outline-0 focus:ring-0 border border-[#dee4dc] bg-white focus:border-[#dee4dc] h-14 placeholder:text-[#6d8566] p-[15px] text-base font-normal leading-normal"
                   value=""
                 />
@@ -88,7 +88,7 @@
               <label class="flex flex-col min-w-40 flex-1">
                 <p class="text-[#131712] text-base font-medium leading-normal pb-2">Email</p>
                 <input
-                  placeholder="Enter customer's email address"
+                  placeholder="Digite o endereço de email do cliente"
                   class="form-input flex w-full min-w-0 flex-1 resize-none overflow-hidden rounded-lg text-[#131712] focus:outline-0 focus:ring-0 border border-[#dee4dc] bg-white focus:border-[#dee4dc] h-14 placeholder:text-[#6d8566] p-[15px] text-base font-normal leading-normal"
                   value=""
                 />
@@ -99,12 +99,12 @@
                 <button
                   class="flex min-w-[84px] max-w-[480px] cursor-pointer items-center justify-center overflow-hidden rounded-lg h-10 px-4 bg-[#f1f4f1] text-[#131712] text-sm font-bold leading-normal tracking-[0.015em]"
                 >
-                  <span class="truncate">Cancel</span>
+                  <span class="truncate">Cancelar</span>
                 </button>
                 <button
                   class="flex min-w-[84px] max-w-[480px] cursor-pointer items-center justify-center overflow-hidden rounded-lg h-10 px-4 bg-[#53d22c] text-[#131712] text-sm font-bold leading-normal tracking-[0.015em]"
                 >
-                  <span class="truncate">Save Customer</span>
+                  <span class="truncate">Salvar Cliente</span>
                 </button>
               </div>
             </div>
