--- a/product-inventory.html
+++ b/product-inventory.html
@@ -5,7 +5,7 @@
       rel="stylesheet"
       as="style"
       onload="this.rel='stylesheet'"
-      href="https://fonts.googleapis.com/css2?display=swap&amp;family=Manrope%3Awght%40400%3B500%3B700%3B800&amp;family=Noto+Sans%3Awght%40400%3B500%3B700%3B900"
+      href="https://fonts.googleapis.com/css2?display=swap&family=Manrope%3Awght%40400%3B500%3B700%3B800&family=Noto+Sans%3Awght%40400%3B500%3B700%3B900"
     />
 
     <title>Stitch Design</title>
@@ -34,7 +34,7 @@
                 ></path>
               </svg>
             </div>
-            <h2 class="text-[#131612] text-lg font-bold leading-tight tracking-[-0.015em]">POS System</h2>
+            <h2 class="text-[#131612] text-lg font-bold leading-tight tracking-[-0.015em]">Sistema PDV</h2>
           </div>
           <div class="flex flex-1 justify-end gap-8">
             <label class="flex flex-col min-w-40 !h-10 max-w-64">
@@ -52,7 +52,7 @@
                   </svg>
                 </div>
                 <input
-                  placeholder="Search"
+                  placeholder="Pesquisar"
                   class="form-input flex w-full min-w-0 flex-1 resize-none overflow-hidden rounded-xl text-[#131612] focus:outline-0 focus:ring-0 border-none bg-[#f2f4f1] focus:border-none h-full placeholder:text-[#6f816a] px-4 rounded-l-none border-l-0 pl-2 text-base font-normal leading-normal"
                   value=""
                 />
@@ -78,11 +78,11 @@
         <div class="px-40 flex flex-1 justify-center py-5">
           <div class="layout-content-container flex flex-col max-w-[960px] flex-1">
             <div class="flex flex-wrap justify-between gap-3 p-4">
-              <p class="text-[#131612] tracking-light text-[32px] font-bold leading-tight min-w-72">Product Inventory</p>
+              <p class="text-[#131612] tracking-light text-[32px] font-bold leading-tight min-w-72">Estoque de Produtos</p>
               <button
                 class="flex min-w-[84px] max-w-[480px] cursor-pointer items-center justify-center overflow-hidden rounded-full h-8 px-4 bg-[#f2f4f1] text-[#131612] text-sm font-medium leading-normal"
               >
-                <span class="truncate">Add Product</span>
+                <span class="truncate">Adicionar Produto</span>
               </button>
             </div>
             <div class="px-4 py-3">
@@ -101,7 +101,7 @@
                     </svg>
                   </div>
                   <input
-                    placeholder="Search Products by Name or Code"
+                    placeholder="Pesquisar Produtos por Nome ou Código"
                     class="form-input flex w-full min-w-0 flex-1 resize-none overflow-hidden rounded-xl text-[#131612] focus:outline-0 focus:ring-0 border-none bg-[#f2f4f1] focus:border-none h-full placeholder:text-[#6f816a] px-4 rounded-l-none border-l-0 pl-2 text-base font-normal leading-normal"
                     value=""
                   />
@@ -114,82 +114,82 @@
                   <thead>
                     <tr class="bg-white">
                       <th class="table-8fad7214-c7b4-47f9-bb2c-744971d5e9f4-column-120 px-4 py-3 text-left text-[#131612] w-[400px] text-sm font-medium leading-normal">
-                        Product Name
+                        Nome do Produto
                       </th>
-                      <th class="table-8fad7214-c7b4-47f9-bb2c-744971d5e9f4-column-240 px-4 py-3 text-left text-[#131612] w-[400px] text-sm font-medium leading-normal">Code</th>
+                      <th class="table-8fad7214-c7b4-47f9-bb2c-744971d5e9f4-column-240 px-4 py-3 text-left text-[#131612] w-[400px] text-sm font-medium leading-normal">Código</th>
                       <th class="table-8fad7214-c7b4-47f9-bb2c-744971d5e9f4-column-360 px-4 py-3 text-left text-[#131612] w-[400px] text-sm font-medium leading-normal">
-                        Category
+                        Categoria
                       </th>
                       <th class="table-8fad7214-c7b4-47f9-bb2c-744971d5e9f4-column-480 px-4 py-3 text-left text-[#131612] w-[400px] text-sm font-medium leading-normal">
-                        Quantity
+                        Quantidade
                       </th>
                       <th class="table-8fad7214-c7b4-47f9-bb2c-744971d5e9f4-column-600 px-4 py-3 text-left text-[#131612] w-[400px] text-sm font-medium leading-normal">
-                        Unit Price
+                        Preço Unit.
                       </th>
                       <th class="table-8fad7214-c7b4-47f9-bb2c-744971d5e9f4-column-720 px-4 py-3 text-left text-[#131612] w-60 text-[#6f816a] text-sm font-medium leading-normal">
-                        Actions
+                        Ações
                       </th>
                     </tr>
                   </thead>
                   <tbody>
                     <tr class="border-t border-t-[#dfe3dd]">
                       <td class="table-8fad7214-c7b4-47f9-bb2c-744971d5e9f4-column-120 h-[72px] px-4 py-2 w-[400px] text-[#131612] text-sm font-normal leading-normal">
-                        Organic Apples
+                        Maçãs Orgânicas
                       </td>
                       <td class="table-8fad7214-c7b4-47f9-bb2c-744971d5e9f4-column-240 h-[72px] px-4 py-2 w-[400px] text-[#6f816a] text-sm font-normal leading-normal">APL001</td>
-                      <td class="table-8fad7214-c7b4-47f9-bb2c-744971d5e9f4-column-360 h-[72px] px-4 py-2 w-[400px] text-[#6f816a] text-sm font-normal leading-normal">Produce</td>
+                      <td class="table-8fad7214-c7b4-47f9-bb2c-744971d5e9f4-column-360 h-[72px] px-4 py-2 w-[400px] text-[#6f816a] text-sm font-normal leading-normal">Hortifrúti</td>
                       <td class="table-8fad7214-c7b4-47f9-bb2c-744971d5e9f4-column-480 h-[72px] px-4 py-2 w-[400px] text-[#6f816a] text-sm font-normal leading-normal">150</td>
-                      <td class="table-8fad7214-c7b4-47f9-bb2c-744971d5e9f4-column-600 h-[72px] px-4 py-2 w-[400px] text-[#6f816a] text-sm font-normal leading-normal">$1.50</td>
+                      <td class="table-8fad7214-c7b4-47f9-bb2c-744971d5e9f4-column-600 h-[72px] px-4 py-2 w-[400px] text-[#6f816a] text-sm font-normal leading-normal">R$1,50</td>
                       <td class="table-8fad7214-c7b4-47f9-bb2c-744971d5e9f4-column-720 h-[72px] px-4 py-2 w-60 text-[#6f816a] text-sm font-bold leading-normal tracking-[0.015em]">
-                        Edit
+                        Editar
                       </td>
                     </tr>
                     <tr class="border-t border-t-[#dfe3dd]">
                       <td class="table-8fad7214-c7b4-47f9-bb2c-744971d5e9f4-column-120 h-[72px] px-4 py-2 w-[400px] text-[#131612] text-sm font-normal leading-normal">
-                        Whole Wheat Bread
+                        Pão Integral
                       </td>
                       <td class="table-8fad7214-c7b4-47f9-bb2c-744971d5e9f4-column-240 h-[72px] px-4 py-2 w-[400px] text-[#6f816a] text-sm font-normal leading-normal">BRD002</td>
-                      <td class="table-8fad7214-c7b4-47f9-bb2c-744971d5e9f4-column-360 h-[72px] px-4 py-2 w-[400px] text-[#6f816a] text-sm font-normal leading-normal">Bakery</td>
+                      <td class="table-8fad7214-c7b4-47f9-bb2c-744971d5e9f4-column-360 h-[72px] px-4 py-2 w-[400px] text-[#6f816a] text-sm font-normal leading-normal">Padaria</td>
                       <td class="table-8fad7214-c7b4-47f9-bb2c-744971d5e9f4-column-480 h-[72px] px-4 py-2 w-[400px] text-[#6f816a] text-sm font-normal leading-normal">80</td>
-                      <td class="table-8fad7214-c7b4-47f9-bb2c-744971d5e9f4-column-600 h-[72px] px-4 py-2 w-[400px] text-[#6f816a] text-sm font-normal leading-normal">$3.00</td>
+                      <td class="table-8fad7214-c7b4-47f9-bb2c-744971d5e9f4-column-600 h-[72px] px-4 py-2 w-[400px] text-[#6f816a] text-sm font-normal leading-normal">R$3,00</td>
                       <td class="table-8fad7214-c7b4-47f9-bb2c-744971d5e9f4-column-720 h-[72px] px-4 py-2 w-60 text-[#6f816a] text-sm font-bold leading-normal tracking-[0.015em]">
-                        Edit
+                        Editar
                       </td>
                     </tr>
                     <tr class="border-t border-t-[#dfe3dd]">
                       <td class="table-8fad7214-c7b4-47f9-bb2c-744971d5e9f4-column-120 h-[72px] px-4 py-2 w-[400px] text-[#131612] text-sm font-normal leading-normal">
-                        Free-Range Eggs
+                        Ovos Caipiras
                       </td>
                       <td class="table-8fad7214-c7b4-47f9-bb2c-744971d5e9f4-column-240 h-[72px] px-4 py-2 w-[400px] text-[#6f816a] text-sm font-normal leading-normal">EGG003</td>
-                      <td class="table-8fad7214-c7b4-47f9-bb2c-744971d5e9f4-column-360 h-[72px] px-4 py-2 w-[400px] text-[#6f816a] text-sm font-normal leading-normal">Dairy</td>
+                      <td class="table-8fad7214-c7b4-47f9-bb2c-744971d5e9f4-column-360 h-[72px] px-4 py-2 w-[400px] text-[#6f816a] text-sm font-normal leading-normal">Laticínios</td>
                       <td class="table-8fad7214-c7b4-47f9-bb2c-744971d5e9f4-column-480 h-[72px] px-4 py-2 w-[400px] text-[#6f816a] text-sm font-normal leading-normal">120</td>
-                      <td class="table-8fad7214-c7b4-47f9-bb2c-744971d5e9f4-column-600 h-[72px] px-4 py-2 w-[400px] text-[#6f816a] text-sm font-normal leading-normal">$4.50</td>
+                      <td class="table-8fad7214-c7b4-47f9-bb2c-744971d5e9f4-column-600 h-[72px] px-4 py-2 w-[400px] text-[#6f816a] text-sm font-normal leading-normal">R$4,50</td>
                       <td class="table-8fad7214-c7b4-47f9-bb2c-744971d5e9f4-column-720 h-[72px] px-4 py-2 w-60 text-[#6f816a] text-sm font-bold leading-normal tracking-[0.015em]">
-                        Edit
+                        Editar
                       </td>
                     </tr>
                     <tr class="border-t border-t-[#dfe3dd]">
                       <td class="table-8fad7214-c7b4-47f9-bb2c-744971d5e9f4-column-120 h-[72px] px-4 py-2 w-[400px] text-[#131612] text-sm font-normal leading-normal">
-                        Almond Milk
+                        Leite de Amêndoas
                       </td>
                       <td class="table-8fad7214-c7b4-47f9-bb2c-744971d5e9f4-column-240 h-[72px] px-4 py-2 w-[400px] text-[#6f816a] text-sm font-normal leading-normal">MLK004</td>
-                      <td class="table-8fad7214-c7b4-47f9-bb2c-744971d5e9f4-column-360 h-[72px] px-4 py-2 w-[400px] text-[#6f816a] text-sm font-normal leading-normal">Dairy</td>
+                      <td class="table-8fad7214-c7b4-47f9-bb2c-744971d5e9f4-column-360 h-[72px] px-4 py-2 w-[400px] text-[#6f816a] text-sm font-normal leading-normal">Laticínios</td>
                       <td class="table-8fad7214-c7b4-47f9-bb2c-744971d5e9f4-column-480 h-[72px] px-4 py-2 w-[400px] text-[#6f816a] text-sm font-normal leading-normal">90</td>
-                      <td class="table-8fad7214-c7b4-47f9-bb2c-744971d5e9f4-column-600 h-[72px] px-4 py-2 w-[400px] text-[#6f816a] text-sm font-normal leading-normal">$3.75</td>
+                      <td class="table-8fad7214-c7b4-47f9-bb2c-744971d5e9f4-column-600 h-[72px] px-4 py-2 w-[400px] text-[#6f816a] text-sm font-normal leading-normal">R$3,75</td>
                       <td class="table-8fad7214-c7b4-47f9-bb2c-744971d5e9f4-column-720 h-[72px] px-4 py-2 w-60 text-[#6f816a] text-sm font-bold leading-normal tracking-[0.015em]">
-                        Edit
+                        Editar
                       </td>
                     </tr>
                     <tr class="border-t border-t-[#dfe3dd]">
                       <td class="table-8fad7214-c7b4-47f9-bb2c-744971d5e9f4-column-120 h-[72px] px-4 py-2 w-[400px] text-[#131612] text-sm font-normal leading-normal">
-                        Ground Beef
+                        Carne Moída
                       </td>
                       <td class="table-8fad7214-c7b4-47f9-bb2c-744971d5e9f4-column-240 h-[72px] px-4 py-2 w-[400px] text-[#6f816a] text-sm font-normal leading-normal">BEEF005</td>
-                      <td class="table-8fad7214-c7b4-47f9-bb2c-744971d5e9f4-column-360 h-[72px] px-4 py-2 w-[400px] text-[#6f816a] text-sm font-normal leading-normal">Meat</td>
+                      <td class="table-8fad7214-c7b4-47f9-bb2c-744971d5e9f4-column-360 h-[72px] px-4 py-2 w-[400px] text-[#6f816a] text-sm font-normal leading-normal">Carnes</td>
                       <td class="table-8fad7214-c7b4-47f9-bb2c-744971d5e9f4-column-480 h-[72px] px-4 py-2 w-[400px] text-[#6f816a] text-sm font-normal leading-normal">60</td>
-                      <td class="table-8fad7214-c7b4-47f9-bb2c-744971d5e9f4-column-600 h-[72px] px-4 py-2 w-[400px] text-[#6f816a] text-sm font-normal leading-normal">$6.00</td>
+                      <td class="table-8fad7214-c7b4-47f9-bb2c-744971d5e9f4-column-600 h-[72px] px-4 py-2 w-[400px] text-[#6f816a] text-sm font-normal leading-normal">R$6,00</td>
                       <td class="table-8fad7214-c7b4-47f9-bb2c-744971d5e9f4-column-720 h-[72px] px-4 py-2 w-60 text-[#6f816a] text-sm font-bold leading-normal tracking-[0.015em]">
-                        Edit
+                        Editar
                       </td>
                     </tr>
                   </tbody>
