--- a/register.html
+++ b/register.html
@@ -37,16 +37,16 @@
                 ></path>
               </svg>
             </div>
-            <h2 class="text-[#131612] text-lg font-bold leading-tight tracking-[-0.015em]">POS System</h2>
+            <h2 class="text-[#131612] text-lg font-bold leading-tight tracking-[-0.015em]">Sistema PDV</h2>
           </div>
         </header>
         <div class="px-40 flex flex-1 justify-center py-5">
           <div class="layout-content-container flex flex-col w-[512px] max-w-[512px] py-5 max-w-[960px] flex-1">
-            <h2 class="text-[#131612] tracking-light text-[28px] font-bold leading-tight px-4 text-center pb-3 pt-5">Register New Operator</h2>
+            <h2 class="text-[#131612] tracking-light text-[28px] font-bold leading-tight px-4 text-center pb-3 pt-5">Registrar Novo Operador</h2>
             <div class="flex max-w-[480px] flex-wrap items-end gap-4 px-4 py-3">
               <label class="flex flex-col min-w-40 flex-1">
                 <input
-                  placeholder="Full Name"
+                  placeholder="Nome Completo"
                   class="form-input flex w-full min-w-0 flex-1 resize-none overflow-hidden rounded-xl text-[#131612] focus:outline-0 focus:ring-0 border-none bg-[#f2f4f1] focus:border-none h-14 placeholder:text-[#6f816a] p-4 text-base font-normal leading-normal"
                   value=""
                 />
@@ -55,7 +55,7 @@
             <div class="flex max-w-[480px] flex-wrap items-end gap-4 px-4 py-3">
               <label class="flex flex-col min-w-40 flex-1">
                 <input
-                  placeholder="Username"
+                  placeholder="Nome de Usuário"
                   class="form-input flex w-full min-w-0 flex-1 resize-none overflow-hidden rounded-xl text-[#131612] focus:outline-0 focus:ring-0 border-none bg-[#f2f4f1] focus:border-none h-14 placeholder:text-[#6f816a] p-4 text-base font-normal leading-normal"
                   value=""
                 />
@@ -64,7 +64,7 @@
             <div class="flex max-w-[480px] flex-wrap items-end gap-4 px-4 py-3">
               <label class="flex flex-col min-w-40 flex-1">
                 <input
-                  placeholder="Password"
+                  placeholder="Senha"
                   class="form-input flex w-full min-w-0 flex-1 resize-none overflow-hidden rounded-xl text-[#131612] focus:outline-0 focus:ring-0 border-none bg-[#f2f4f1] focus:border-none h-14 placeholder:text-[#6f816a] p-4 text-base font-normal leading-normal"
                   value=""
                 />
@@ -73,7 +73,7 @@
             <div class="flex max-w-[480px] flex-wrap items-end gap-4 px-4 py-3">
               <label class="flex flex-col min-w-40 flex-1">
                 <input
-                  placeholder="Confirm Password"
+                  placeholder="Confirmar Senha"
                   class="form-input flex w-full min-w-0 flex-1 resize-none overflow-hidden rounded-xl text-[#131612] focus:outline-0 focus:ring-0 border-none bg-[#f2f4f1] focus:border-none h-14 placeholder:text-[#6f816a] p-4 text-base font-normal leading-normal"
                   value=""
                 />
@@ -84,9 +84,9 @@
                 <select
                   class="form-input flex w-full min-w-0 flex-1 resize-none overflow-hidden rounded-xl text-[#131612] focus:outline-0 focus:ring-0 border-none bg-[#f2f4f1] focus:border-none h-14 bg-[image:--select-button-svg] placeholder:text-[#6f816a] p-4 text-base font-normal leading-normal"
                 >
-                  <option value="one">Role</option>
-                  <option value="two">two</option>
-                  <option value="three">three</option>
+                  <option value="one">Cargo</option>
+                  <option value="two">Gerente</option>
+                  <option value="three">Operador de Caixa</option>
                 </select>
               </label>
             </div>
@@ -94,7 +94,7 @@
               <button
                 class="flex min-w-[84px] max-w-[480px] cursor-pointer items-center justify-center overflow-hidden rounded-xl h-10 px-4 flex-1 bg-[#8cd279] text-[#131612] text-sm font-bold leading-normal tracking-[0.015em]"
               >
-                <span class="truncate">Register</span>
+                <span class="truncate">Registrar</span>
               </button>
             </div>
           </div>
